--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bootcamp</string>
+    <string name="weather_display_error">Oops… Weather can\'t be loaded</string>
 </resources>
